--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.5",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "ts-node": "^8.10.1",
     "typescript": "^2.8.3"
